...
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <searchBar contentMode="redraw" searchBarStyle="minimal" placeholder="Enter keywords" translatesAutoresizingMaskIntoConstraints="NO" id="kOZ-VJ-5DA">
                                <rect key="frame" x="0.0" y="64" width="375" height="44"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="search"/>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="zXB-0H-YsY"/>
                                </connections>
                            </searchBar>
...
                            <constraint firstAttribute="trailing" secondItem="kOZ-VJ-5DA" secondAttribute="trailing" id="OGQ-Ru-EXN"/>
                            <constraint firstItem="kOZ-VJ-5DA" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Q38-2F-fCT"/>
                            <constraint firstItem="hDO-6e-90R" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="RVq-Dw-BNR"/>
                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="fkC-6B-aA6" secondAttribute="bottom" id="qEm-sF-nI8"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Search Photos" id="5FB-EG-54c"/>
                    <connections>
                        <outlet property="activityIndicator" destination="hDO-6e-90R" id="vUy-z1-pAV"/>
                        <outlet property="collectionView" destination="fkC-6B-aA6" id="kU4-gP-q46"/>
                        <outlet property="searchBar" destination="kOZ-VJ-5DA" id="P4m-EW-cW9"/>
                    </connections>
                </viewController>
...
